--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ Mulai petualangan balap Anda di sini!</p>
 
 <body>
 	<div style="position: absolute; top: 20px; right: 20px; z-index: 999;">
-		<a href="file:///C:/xampp/htdocs/rasyaxe6/2097_pop/login.html" class="btn" style="background-color: #6c757d; color: white;">Login</a>
+		<a href="https://rasyaananta.github.io/login.html/" class="btn" style="background-color: #6c757d; color: white;">Login</a>
 	</div>
 
 
