--- a/index.html
+++ b/index.html
@@ -76,21 +76,21 @@ Mulai petualangan balap Anda di sini!</p>
                                     <div class="product">
                                         <div class="tm-nav-link">
                                             <i class="fas fa-users fa-3x tm-nav-icon"></i>
-                                            <span class="tm-nav-text">Our Team</span>
+                                            <span class="tm-nav-text">History</span>
                                             <div class="product__bg"></div>            
                                         </div>                                     
                                         <div class="product__description">
                                             <div class="p-sm-4 p-2">
                                                 <div class="row mb-3">
                                                     <div class="col-12">
-                                                        <h2 class="tm-page-title">Background of Our Team</h2>        
+                                                        <h2 class="tm-page-title">Sejarah Formula One</h2>        
                                                     </div>
                                                 </div>
                                                 <div class="row tm-reverse-sm">
                                                     <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8">
-                                                        <p class="mb-4">Vestibulum aliquet, arcu accumsan lobortis bibendum, justo velit efficitur lorem, at pulvinar mi justo nec lacus. Nullam et libero aliquet, luctus nunc sit amet, tincidunt ligula. Sed finibus ante sed tortor cursus, nec malesuada lectus interdum.</p>
-                                                        <p class="mb-4">Sed ex turpis, vulputate in efficitur id, lobortis eget nibh. Pellentesque maximus ipsum eget velit imperdiet sodales. Suspendisse in blandit mi.</p>
-                                                        <p class="mb-5">Pellentesque finibus felis risus, ut malesuada felis viverra at. Quisque accumsan in mi non hendrerit.</p>
+                                                        <p class="mb-4">Formula 1 (F1) dimulai pada tahun 1950 sebagai kejuaraan dunia resmi yang diselenggarakan oleh FIA. Kejuaraan pertama diadakan di Silverstone, Inggris. Pembalap legendaris seperti Juan Manuel Fangio, yang meraih lima gelar dunia, mendominasi era awal.</p>
+                                                        <p class="mb-4">Pada 1960-an, teknologi mobil berkembang pesat, dengan pembalap seperti Jim Clark dan Graham Hill menjadi juara. Era 1980-1990-an didominasi oleh Ayrton Senna, Alain Prost, dan Michael Schumacher, yang meraih tujuh gelar dunia.</p>
+                                                        <p class="mb-5">F1 memasuki era modern pada 2000-an dengan pembalap seperti Kimi Räikkönen, Fernando Alonso, dan Lewis Hamilton, yang meraih tujuh gelar dunia. Teknologi ramah lingkungan dan keselamatan semakin diperhatikan di tahun 2020-an, dengan pembalap muda seperti Max Verstappen mengambil alih persaingan.</p>
                                                         <a href="#" class="btn tm-btn-gray">Read More</a>        
                                                     </div>                                                
                                                     <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 mb-lg-0 mb-sm-4 mb-4">
