--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@ Mulai petualangan balap Anda di sini!</p>
                                             <div class="pt-sm-4 pb-sm-4 pl-sm-5 pr-sm-5 pt-2 pb-2 pl-3 pr-3">
                                                 <div class="row mb-3">
                                                     <div class="col-12">
-                                                        <h2 class="tm-page-title">Contact Us</h2>        
+                                                        <h2 class="tm-page-title">Hubungi Kami</h2>        
                                                     </div>
                                                 </div>
                                                 <div class="row mb-4">
                                                     <div class="col-12">
-                                                        <p>Lorem ipsum dolor site amet, consectetur adipiscing elit. Aliquam interdum, nisl sed faucibus tempor, massa velit laoreet ipsum, et faucibus sapien magna at enim. Suspendisse a dictum tortor, vel rhoncus libero.</p>
+                                                        <p>Anda dapat mengirim pesan untuk pertanyaan tentang konten, jadwal balapan, atau masalah teknis, serta memberikan masukan untuk meningkatkan kualitas situs. Kami juga menyediakan informasi terkait media dan peluang kerja sama bisnis atau sponsor. Tim kami berkomitmen untuk merespons dengan cepat dan memastikan pengalaman Anda sebagai penggemar F1 tetap memuaskan. Terima kasih atas kunjungan Anda!</p>
                                                     </div>
                                                 </div>
                                                 <div class="row">
