--- a/index.html
+++ b/index.html
@@ -187,9 +187,7 @@ Mulai petualangan balap Anda di sini!</p>
                 </div>                
             </div>
             <footer>
-                <p class="small tm-copyright-text">Copyright &copy; <span class="tm-current-year">2020</span> Your Company. 
-                
-                Design: <a rel="nofollow" href="https://www.tooplate.com" class="tm-text-highlight">Tooplate</a></p>
+                <p class="small tm-copyright-text">Copyright &copy; <span class="tm-current-year">2020</span> Formula one : <a rel="nofollow" href="https://rasyaananta.github.io/index.html/" class="tm-text-highlight">Pedia</a></p>
             </footer>
         </div> <!-- .tm-main-content -->  
     </div>
