--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ Mulai petualangan balap Anda di sini!</p>
                 </div>                
             </div>
             <footer>
-                <p class="small tm-copyright-text">Copyright &copy; <span class="tm-current-year">2020</span> Formula 1 <a rel="nofollow" href="https://rasyaananta.github.io/index.html/" class="tm-text-highlight">Pedia</a></p>
+                <p class="small tm-copyright-text">Copyright &copy; <span class="tm-current-year">2020</span> F1 Pedia : <a rel="nofollow" href="https://www.formula1.com/" class="tm-text-highlight"> Formula One</a></p>
             </footer>
         </div> <!-- .tm-main-content -->  
     </div>
